--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Meditation</title>
 	<style>
 		body {
-			background-image: linear-gradient(#C508FF, #00FF40);
+			background-image: linear-gradient(#C508FF, #42ff71);
 			background-size: cover;
 			background-repeat:no-repeat;
 			height: 95vh;
@@ -41,16 +41,17 @@
 		  cursor: pointer;
 		}
 		.button {
-			margin-top: 10vh;
-			width: 140px;
+			margin-top: 8vh;
+			width: 120px;
 			border: none;
-			margin-left: 5vw;
-			margin-right: 5vw;
+			margin-left: 4vw;
+			margin-right: 4vw;
 			height: 55px;
 			border-radius: 4px;
 			font-family: 'Palanquin Dark', sans-serif;
 			font-size: 30px;
 			color: #983FD3;
+			background-color: white;
 		}
 		#freq {
 			margin-top: 3vh;
@@ -63,6 +64,7 @@
 			width: 240px;
 			height: 110px;
 			font-size: 55px;
+			text-transform: uppercase;
 		}
 	</style>
 </head>
