--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			background-size: cover;
 			background-repeat:no-repeat;
 			height: 95vh;
-			background-color: #00FF40;
+			background-color: #42ff71;
 		}
 		#slider {
 			width: 80vw;
